<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_quiz"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="de.hu_berlin.informatik.humboldtquiz.android.RoboCtrlActivity"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:ems="10"
        android:id="@+id/question"
        android:layout_weight="0.88"
        android:enabled="true"
        android:text="@string/textfield_next_question"
        android:gravity="left"
        android:textSize="30sp"
        tools:ignore="RtlHardcoded"
        android:clickable="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:cursorVisible="false"
        android:inputType="textMultiLine|textNoSuggestions" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_a"
        android:id="@+id/button_a"
        android:onClick="onClickA"
        android:nestedScrollingEnabled="false"
        android:textSize="24sp"
        tools:targetApi="lollipop" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_b"
        android:id="@+id/button_b"
        android:onClick="onClickB"
        android:textSize="24sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_c"
        android:id="@+id/button_c"
        android:onClick="onClickC"
        android:nestedScrollingEnabled="false"
        android:textSize="24sp"
        tools:ignore="HardcodedText"
        tools:targetApi="lollipop" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:id="@+id/question_result"
        android:layout_gravity="center_horizontal"
        android:visibility="invisible"
        android:textSize="24sp"
        android:text="@string/wrong_right"
        android:inputType="textMultiLine|textNoSuggestions"
        android:textAlignment="center"
        android:layout_weight="0.07"
        android:clickable="false"
        android:focusable="false"
        android:focusableInTouchMode="false" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_next"
        android:id="@+id/button_resume"
        android:layout_gravity="center_horizontal"
        android:onClick="onClickBack"
        android:textSize="24sp" />

    <Button
        android:layout_width="match_parent"
        android:text="@string/button_d"
        android:id="@+id/button_d"
        android:onClick="onClickD"
        android:nestedScrollingEnabled="false"
        android:visibility="invisible"
        android:textSize="12sp"
        tools:targetApi="lollipop"
        android:layout_height="0dp" />
</LinearLayout>